--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.45.1",
+    "@tsparticles/all": "^3.4.0",
+    "@tsparticles/engine": "^3.4.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.4.0",
     "@uploadthing/react": "^6.6.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
@@ -48,6 +52,7 @@
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tsparticles-engine": "^2.12.0",
     "uploadthing": "^6.12.0",
     "uuid": "^10.0.0",
     "zod": "^3.23.8",
